[package]
name = "rs_merkle"
version = "0.1.0"
authors = ["Anton Suprunchuk <anton.suprunchuk@gmail.com>"]
description = "The most advanced Merkle Tree librray for Rust"
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/antouhou/rs-merkle"
documentation = "https://docs.rs/rs_merkle/"
readme = "README.md"
keywords = ["merkle", "tree", "proof", "hash", "multiproof",]
exclude = ["/ci/*", "/scripts/*", "/.github/*", "/bors.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"

# standard crate data is left out
[dev-dependencies]
rayon = "1.5.1"
